Stopped the settings tabs horizontal child menu items from collapsing as currently the CSS does not support it.

--- a/src/scss/styles/_settings.scss
+++ b/src/scss/styles/_settings.scss
@@ -117,6 +117,7 @@
 	}
 	.foofields-tab-menu {
 	  height: $tab-h-settings-menu-height + 1px;
+	  white-space: nowrap;
 
 	  .foofields-tab-menu-item,
 	  .foofields-tab-menu-link {
